--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "home_page_introduction.md", title: "Home", icon: address-card}
-  - {file: "README.md", title: "Project", icon: address-card}
+  - {file: "home_page_introduction.md", title: "Home" }
+  - {file: "README.md", title: "Project"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
