--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "project.md", title: "Project"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "liubaobao92@gmail.com"}
+  - {title: Mail, icon: envelope, url: "mailto:liubaobao92@gmail.com"}
   - {title: Github, icon: github, url: "https://github.com/PingpingL"}
 
 comments:
