--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", icon: home}
+  - {file: "index.html", title: "Home"}
   - {file: "resume.pdf", title: "Resume" }
   - {file: "project.md", title: "Project"}
 
