--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home"}
   - {url: "assets/resume.pdf", title: "Resume" }
-  - {url: "project.md", title: "Project"}
+  - {file: "project.md", title: "Project"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:liubaobao92@gmail.com"}
