--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home"}
-  - {url: "assets/resume.pdf", title: "Resume" }
+  - {url: "assets/resume.pdf", title: "Resume(English)" }
+  - {url: "assets/resume_chinese.pdf", title: "Resume(Chinese)" }
   - {file: "project.md", title: "Project"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
