--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home"}
   - {url: "assets/resume.pdf", title: "Resume(English)" }
   - {url: "assets/resume_chinese.pdf", title: "Resume(Chinese)" }
-  - {file: "project.md", title: "Project"}
+  - {file: "project.md", title: "Past Project"}
+  - {file: "Research.md", title: "Research"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:liubaobao92@gmail.com"}
