--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "Research.md", title: "Research"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:liubaobao92@gmail.com"}
+  - {title: Mail, icon: envelope, url: "guangping.liu@slu.edu"}
   - {title: Github, icon: github, url: "https://github.com/PingpingL"}
 
 comments:
