--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "home_page_introduction.md", title: "Home"}
-  - {url: "assets/resume.pdf", title: "Resume(English)" }
-  - {url: "assets/resume_chinese.pdf", title: "Resume(Chinese)" }
+ # - {url: "assets/resume.pdf", title: "Resume(English)" }
+  #- {url: "assets/resume_chinese.pdf", title: "Resume(Chinese)" }
   - {file: "project.md", title: "Past Project"}
   - {file: "Research.md", title: "Research"}
 
