--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home"}
-  - {file: "assets/CV.pdf", title: "Resume" }
+  - {url: "assets/CV.pdf", title: "Resume" }
   #- {url: "assets/resume_chinese.pdf", title: "Resume(Chinese)" }
   - {file: "project.md", title: "Research"}
   - {file: "News.md", title: "News"}
