--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,10 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home"}
-  - {url: "assets/CV.pdf", title: "Resume" }
+  #- {url: "assets/CV.pdf", title: "Resume" }
   #- {url: "assets/resume_chinese.pdf", title: "Resume(Chinese)" }
   - {file: "project.md", title: "Research"}
+  - {file: "publication.md", title: "Publication"}
   - {file: "News.md", title: "News"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
